deploy/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aspnet-app
  labels:
    app: aspnet-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aspnet-app
  template:
    metadata:
      labels:
        app: aspnet-app
    spec:
      containers:
      - name: aspnet-container
        image: owllark/webapp:<num>
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: dockerhub-secret
