deploy/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: aspnet-app
  ports:
    - protocol: TCP
      port: 80  
      targetPort: 8080 
  type: NodePort
